elrontva/keresd a hibát

--- a/JwtAuthentication-master/JwtAuthentication/appsettings.json
+++ b/JwtAuthentication-master/JwtAuthentication/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=JwtAuthentication;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Data Source=tcp:cleverchairapidb.database.windows.net,1433;Initial Catalog=CLeverChairAzureDB;User Id=CleverChairDB@cleverchairapidb;Password=Alma12345",
+
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleverChairApiDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Data Source=tcp:cleverchairapidb.database.windows.net,1433;Initial Catalog=JwtAuthentication_db;User Id=cleverchairuserid@cleverchairapidb;Password=Alma12345"
+    //"JwtAuthenticationContext": "Server=(localdb)\\mssqllocaldb;Database=JwtAuthenticationContext-5f24c695-a987-45b7-9fc0-22bcc0dfca80;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"JwtAuthenticationContext":"Data Source=tcp:cleverchairapidb.database.windows.net,1433;Initial Catalog=JwtAuthentication_db;User Id=jwtDB@cleverchairapidb;Password=Alma12345"
   },
   "Jwt": {
     "Site": "http://www.security.org",
